--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Company Profile | Limited</title>
     <link rel="stylesheet" href="Style/style.css" />
+    <link rel="stylesheet" href="Style/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -19,6 +21,7 @@
         <div class="header-left">
           <img class="logo" src="Image/Limit Logo_limited 3 White.png" />
         </div>
+        <div class="fa fa-bars menu-icon"></div>
         <div class="menu-link">
           <a href="#judul">Tentang</a>
           <a href="#porto">Portofolio</a>
